# CCOpMv-LTE-Simulations

./: .gitignore  .project  README.md  SimuLTE_UE_limit_test.ipynb  VariableSpeedMobility.cc  VariableSpeedMobility.h  VariableSpeedMobility.ned  eNB1.py  eNB2.ini  eNB2.py  eNB3.py  geometry.py  helper.py  helper_ned.py  hetnet_base.py  ilp_move_users-2.sna  main.py  ned_tmp.txt  pyproject.toml  run.py  run_scenario.py  test1eNB.py  teste.ini  x2_ned.py
Functions/: 01-07-2023-23h50min.loh  10_05_22.txt  clean_all.py  comp_comput_performance.py  coordinates.py  errors.py  ga.py  gen_ilp_info.py  general_functions.py  geometry.py  graphs.py  graphs_solvers.py  gwo.py  helper.py  helper_ned.py  helper_xml.py  hist.py  ilp_fixed_users-sched=MAXCI--0.sna  ilp_move_users-0.sna  ilp_move_users-1.sna  ilp_move_users-10.sna  ilp_move_users-11.sna  ilp_move_users-12.sna  ilp_move_users-13.sna  ilp_move_users-2.sna  ilp_move_users-213.sna  ilp_move_users-3.sna  ilp_move_users-321.sna  ilp_move_users-4.sna  ilp_move_users-5.sna  ilp_move_users-6.sna  ilp_move_users-7.sna  ilp_move_users-8.sna  ilp_move_users-9.sna  plot_SNR_map.py  result_10.txt  result_100.txt  result_40.txt  result_5.txt  result_60.txt  (+11 more)
Functions/5G_Scenarios/: eNB1.py
Network_CCOpMv/: .cproject  .project  .qtenvrc  Makefile  Network_CCOpMv  Network_CCOpMv_dbg
app/: __init__.py  clean_all.py  constants.py  gen_ilp_info.py  run_all.py  run_simulations.py  sinrMapGen.py  sinrTEstCode.py
docs/: CODE_BEHAVIOUR.md  SOLVERS_GA_GWO.md
projetoteste/: .cproject  .project  .qtenvrc  Makefile  projetoteste  teste.ini
(+6820 files in other folders)
