[project]
name = "lte-scenarios-simulation"
version = "0.1.0"
description = "LTE/5G scenarios simulation and ILP solvers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "pandas>=2.0",
    "plotly>=5.14",
    "joblib>=1.3",
    "pygad>=3.0",
    "ortools>=9.8",
    "scikit-learn>=1.3",
    "opp-env"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
run-all = "app.run_all:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

